# internal/infrastructures/router.go
@@ -3,6 +3,8 @@ package infrastructure
 import (
 	"gcim/example/internal/api"
 	"gcim/example/internal/controllers"
+	"gcim/example/pkg/getdownloadurlexample"
+	uploadexample "gcim/example/pkg/uploadExample"
 	"log"
 
 	"github.com/labstack/echo/v4"
@@ -10,14 +12,20 @@ import (
 )
 
 type Server struct {
-	userController *controllers.TaskController
+	userController        *controllers.TaskController
+	getDownloadUrlExample *getdownloadurlexample.GetDownloadURLExample
+	uploadExample         *uploadexample.UploadExample
 }
 
 func NewServer(
 	userController *controllers.TaskController,
+	getDownloadUrlExample *getdownloadurlexample.GetDownloadURLExample,
+	uploadExample *uploadexample.UploadExample,
 ) *Server {
 	return &Server{
-		userController: userController,
+		userController:        userController,
+		getDownloadUrlExample: getDownloadUrlExample,
+		uploadExample:         uploadExample,
 	}
 }
 
@@ -25,8 +33,12 @@ func (s *Server) CreateTask(ctx echo.Context) error {
 	return s.userController.CreateTask(ctx)
 }
 
+func (s *Server) GetDownloadUrlExample(ctx echo.Context, params api.GetDownloadUrlExampleParams) error {
+	return s.getDownloadUrlExample.Run(ctx, params)
+}
+
 func (s *Server) UploadExample(ctx echo.Context, eventId string, orgCspDocId string) error {
-	return nil
+	return s.uploadExample.Run(ctx, eventId, orgCspDocId)
 }
 
 func InitRouter() {
@@ -45,6 +57,8 @@ func InitRouter() {
 	}
 
 	api.RegisterHandlers(e, server)
+
+	e.Static("/static", "static")
 
 	e.Logger.Fatal(e.Start(":1313"))
 }
